--- a/MovieSearch/Info.plist
+++ b/MovieSearch/Info.plist
@@ -58,5 +58,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+ 		<string>youtube</string>
+   	</array>
 </dict>
 </plist>
